@@ -1,30 +1,5 @@
-FROM openjdk:17.0
+FROM novicezk/midjourney-proxy
 
-ARG user=spring
-ARG group=spring
+ENV mj.discord.guild-id 1104787197980319916 mj.discord.channel-id 1104787197980319919 mj.discord.user-token MTA3NTExMjg2NTQ4NjM0NDI0Mg.G2OvuV.vB_A5WHj9B9kd01iwc63iWyfQZx-8TSaW-AmMM mj.discord.bot-token MTEwNTQ1MDM1MTI4MjM3Njc2NA.GA5RHw.bQF3HAKVc4PaQi5fYiOgS8FGfxj9LmkE3m3DxY
 
-ENV SPRING_HOME=/home/spring
-
-ENV JAVA_OPTS -XX:MaxRAMPercentage=85 -Djava.awt.headless=true -XX:+HeapDumpOnOutOfMemoryError \
- -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=35 -Xlog:gc:file=/home/spring/logs/gc.log \
- -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9876 -Dcom.sun.management.jmxremote.ssl=false \
- -Dcom.sun.management.jmxremote.authenticate=false -Dlogging.file.path=/home/spring/logs \
- -Dserver.port=8080 -Duser.timezone=Asia/Shanghai
-
-RUN groupadd -g 1000 ${group} \
-	&& useradd -d "$SPRING_HOME" -u 1000 -g 1000 -m -s /bin/bash ${user} \
-	&& mkdir -p $SPRING_HOME/config \
-	&& mkdir -p $SPRING_HOME/logs \
-	&& chown -R ${user}:${group} $SPRING_HOME/config $SPRING_HOME/logs
-
-VOLUME ["$SPRING_HOME/config", "$SPRING_HOME/logs"]
-
-USER ${user}
-
-WORKDIR $SPRING_HOME
-
-EXPOSE 8080 9876
-
-ENTRYPOINT ["bash","-c","java $JAVA_OPTS -jar app.jar"]
-
-COPY --chown=${user}:${group} target/*.jar $SPRING_HOME/app.jar
+EXPOSE 8080
